date of joining added to details

--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -187,6 +187,10 @@
                               <% end %>
                             </dd>
                           </div>
+                          <div class=row-item>
+                          <dt class="col-sm-6 text-start">Date of joining</dt>
+                          <dd class="col-sm-6 text-start"><%= faculty.joining_date || '-' %></dd>
+                        </div>
                             <div class=row-item>
                             <dt class="col-sm-6 text-start">Last Updated</dt>
                             <dd class="col-sm-6 text-start"><%= faculty.updated_at.strftime('%B %d, %Y %I:%M %p') %></dd>
