--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -18,6 +18,9 @@
         <div class="overlay-contact">
           <%= link_to 'Contact Us', home_team_path, class: "nav-link px-2 text-body-secondary home-link" %>
         </div>
+        <div class="overlay-home">
+          <%= link_to "Print", faculties_print_path(format: :pdf),class: "btn" %>          
+        </div>
     </div>
   </header>
 </div>
