--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -18,9 +18,15 @@
         <div class="overlay-contact">
           <%= link_to 'Contact Us', home_team_path, class: "nav-link px-2 text-body-secondary home-link" %>
         </div>
+        <% if current_user.present? && current_user.super_admin? %>
         <div class="overlay-home">
-          <%= link_to "Print", faculties_print_path(format: :pdf),class: "btn" %>          
+          <%= link_to "Print", faculties_print_path(format: :pdf, user_id: current_user.id), class: "btn" %>
         </div>
+        <% elsif current_user.present? && current_user.admin? %>
+        <div class="overlay-home">
+          <%= link_to "Print", faculties_print_path(format: :pdf, user_id: current_user.id), class: "btn" %>
+        </div>
+        <% end %>
     </div>
   </header>
 </div>
