--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -120,7 +120,7 @@
 
    .btn-round {
   position: fixed;
-  bottom: 20px;
+  bottom: 70px;
   right: 20px;
   border-radius: 50%;
   width: 40px;
@@ -257,7 +257,7 @@
               <div class="member d-flex align-items-start">
                 <%= image_tag('Megha_final.jpg', id:"web-team", class: 'teampic img-fluid', alt: 'Web Team Image 1') %>
                 <div class="member-info">
-                  <h4>Megha Arya</h4>
+                  <h4>anuhya shashi</h4>
                   <span>B.Tech, 2026</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
