--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -5,6 +5,9 @@
     padding: 30px;
     border-radius: 5px;
     background: #87addb14;
+    /* Set fixed height and width for the card */
+    width: 500px; /* Adjust the width as needed */
+    height: 300px; /* Adjust the height as needed */
     }
 
 
@@ -12,6 +15,7 @@
     .team .member .teampic {
     overflow: hidden;
     width: 180px;
+     height: 200px; /* Adjust the image size as needed */
     border-radius: 10%;
     }
 
@@ -75,18 +79,8 @@
 
     .team .member a i {
     color: #156144;
-    font-size: 16px;
+    font-size: 40px;
     margin: 0 2px;
-    }
-
-
-
-    .team .member .social a:hover {
-    background: #3db166;
-    }
-
-    .team .member .social a:hover i {
-    color: #fff;
     }
 
     .team .member .social a+a {
@@ -119,8 +113,8 @@
 
 
    .btn-round {
-  position: fixed;
-  bottom: 20px;
+  position: relative;
+  bottom: 10px;
   right: 20px;
   border-radius: 50%;
   width: 40px;
@@ -139,6 +133,12 @@
     height: 30px;
     line-height: 30px;
   }
+}
+
+.github-icon{
+  padding : 0;
+  text-decoration: none;
+  font-size: 100px;
 }
 </style>
 
@@ -175,8 +175,8 @@
                   <h4>Prof. B Ravi </h4>
                   <span>Director NITK</span>
                   <div class="social align-items-center">
-                    <a href=""><i class="bi bi-github"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
@@ -198,8 +198,8 @@
                   <span>Associate Professor</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
-                    <a href=""><i class="bi bi-github"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
@@ -219,8 +219,8 @@
                   <span>Technical Staff</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
-                    <a href=""><i class="bi bi-github"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                   <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
@@ -240,8 +240,8 @@
                   <span>B.Tech, 2025</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
-                    <a href=""><i class="bi bi-github"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/Shivyoddha" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://www.linkedin.com/in/anish-kumbhar-465980223" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
@@ -261,8 +261,8 @@
                   <span>B.Tech, 2026</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
-                    <a href=""><i class="bi bi-github"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                   <a href="https://github.com/mayghhaa" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://www.linkedin.com/in/megha-arya-61576022b" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
@@ -276,8 +276,8 @@
                   <span>B.Tech, 2026</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
-                    <a href=""><i class="bi bi-github"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://www.linkedin.com/in/poorva-bhagwat" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
@@ -291,8 +291,8 @@
                   <span>B.Tech, 2026</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
-                    <a href=""><i class="bi bi-github"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://github.com/Poorvab2525" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
@@ -315,8 +315,8 @@
                   <span>B.Tech, 2026</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
-                    <a href=""><i class="bi bi-github"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/ANSHVIVEKMALHOTRA" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://www.linkedin.com/in/ansh-vivek-malhotra-569776255/" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
@@ -330,8 +330,8 @@
                   <span>B.Tech, 2026</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
-                    <a href=""><i class="bi bi-github"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/Chiru2004" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://www.linkedin.com/in/chirag-s-854a2b283/" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
@@ -345,8 +345,8 @@
                   <span>B.Tech, 2026</span>
                   <span>Dept. of CSE</span>
                   <div class="social">
-                    <a href="" class="text-decoration-none"><i class="bi bi-github"></i></a>
-                    <a href="" class="text-decoration-none"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/Rishabh110204" class ="github-icon"><i class="fa-brands fa-square-github fa-2xl" style="color: #000000;"></i></a>
+                    <a href="https://www.linkedin.com/in/rishabh-mahor" class ="github-icon"><i class="fa-brands fa-linkedin fa-2xl" style="color: #74C0FC;"></i></a>
                   </div>
                 </div>
               </div>
