--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -98,7 +98,7 @@
       <tr>
         <th class="firstend"> Sl. No. </th>
         <th style="text-align: ;"> Name </th>
-        <th > Designation </th>
+        <th > Designation/Title </th>
         <th > Contact </th>
         <th class="lastend"> Details </th>
       </tr>
@@ -147,7 +147,7 @@
                             <dd class="col-sm-6 text-start"><%= faculty.name %></dd>
                           </div>
                           <div class=row-item>
-                            <dt class="col-sm-6 text-start ">Designation</dt>
+                            <dt class="col-sm-6 text-start ">Designation/Title</dt>
                             <dd class="col-sm-6 text-start col2"><%= faculty.designation.title %></dd>
                           </div>
                             <div class=row-item>
