--- a/app/assets/stylesheets/team.css
+++ b/app/assets/stylesheets/team.css
@@ -1,27 +1,24 @@
 
 .card-img-top {
-  width: 100%;
-  height: 200px; /* Set a specific height for the image or adjust as needed */
-  object-fit: cover;
+  height: 200%; 
+  object-fit: cover; 
 }
 
+
 .card {
-  height: auto; /* Remove fixed height to allow content to expand */
+  height: 100%; 
 }
 
 .card-body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%; /* Ensure the card body fills the available height */
 }
 
 .web-team {
-  background-color: rgba(25, 46, 89, 1); /* Use solid color without transparency by default */
+   background-color: rgba(25,46,89,255);
 }
 
-@media screen and (max-width: 768px) {
-  .web-team {
-    background-color: rgba(25, 46, 89, 0.8); /* Modify transparency on smaller screens */
-  }
+.web-team:hover {
+  background-color: #122242;
 }
