--- a/app/views/faculties/_footer.html.erb
+++ b/app/views/faculties/_footer.html.erb
@@ -5,4 +5,6 @@
 
     </ul>
     <p class="text-center text-body-secondary">Copyright All Rights Reserved 2024 @NITK Surathkal</p>
+    <br>
+    <center><p>Visitor's count: <%= @impressionist_count %></p></center>
   </footer>
