--- a/app/views/faculties/_footer.html.erb
+++ b/app/views/faculties/_footer.html.erb
@@ -1,3 +1,9 @@
+<style>
+  #counter-container {
+    size: 14px;
+    width: 10%;
+  }
+</style>
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><%= link_to 'Home', 'http://telephone.nitk.ac.in', class: "nav-link px-2 text-body-secondary" %></li>
@@ -6,5 +12,9 @@
     </ul>
     <p class="text-center text-body-secondary">Copyright All Rights Reserved 2024 @NITK Surathkal</p>
     <br>
-    <center><p>Visitor's count: <%= @impressionist_count %></p></center>
+<center>
+  <p id="counter-container">Visitor count
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1141800/t/5"></script>
+  </p>
+</center>
   </footer>
