--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -98,7 +98,7 @@
       <tr>
         <th class="firstend"> Sl. No. </th>
         <th style="text-align: ;"> Name </th>
-        <th > Designation/Title </th>
+        <th > Designation </th>
         <th > Contact </th>
         <th class="lastend"> Details </th>
       </tr>
