--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -154,7 +154,7 @@
                             <dd class="col-sm-6 text-start "><%= faculty.department.name %></dd>
                           </div>
                         <% end %>
-                        <% if faculty.designation.title != nil || faculty.designation.title == '-' %>
+                        <% if faculty.designation.title != nil && faculty.designation.title != '-' && faculty.designation.title != '-NA-' %>
                           <div class=row-item>
                               <% if faculty.designation.title == 'Other' %>
                             <dt class="col-sm-6 text-start ">Title</dt>
