--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -39,7 +39,7 @@
         <div class="accordion">
           <label class="accordion-label" tabindex="0"><%= unit.title %></label>
           <div class="accordion-content">
-            <% sorted_departments = unit.departments.order(:custom_order, :name) %>
+            <% sorted_departments = unit.departments.where.not(name: "Backup").order(:custom_order, :name) %>
             <% sorted_departments.each do |department| %>
              <% if department.sub_directories.present? %>
               <p class="department-with-subdirectory"  data-unit="<%= unit.id %>" data-department="<%= department.id %>">
