--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -148,6 +148,14 @@
                             <dd class="col-sm-6 text-start"><%= faculty.name %></dd>
                           </div>
                           <% end %>
+<% if faculty.unit == 'Administration' %>
+                        <% if faculty.designation.title != nil && faculty.designation.title != '-' && faculty.designation.title != '-NA-' && faculty.department.name != nil %>
+                          <div class=row-item>
+                            <dt class="col-sm-6 text-start ">Designation</dt>
+                            <dd class="col-sm-6 text-start col2">%= faculty.department.name %> (<%= faculty.designation.title %>) </dd>
+                          </div>
+                        <% end %>
+<% else %>
                         <% if faculty.department.name != nil %>
                           <div class=row-item>
                             <dt class="col-sm-6 text-start ">Section</dt>
@@ -164,6 +172,7 @@
                             <dd class="col-sm-6 text-start col2"><%= faculty.designation.title %></dd>
                           </div>
                         <% end %>
+<% end %>
                         <% if faculty.position1&.title != nil %>
                           <div class="row-item">
                             <dt class="col-sm-6 text-start">Additional Charge</dt>
