--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -148,7 +148,7 @@
                             <dd class="col-sm-6 text-start"><%= faculty.name %></dd>
                           </div>
                           <% end %>
-<% if faculty.unit == 'Administration' %>
+<% if faculty.department.unit == 'Administration' %>
                         <% if faculty.designation.title != nil && faculty.designation.title != '-' && faculty.designation.title != '-NA-' && faculty.department.name != nil %>
                           <div class=row-item>
                             <dt class="col-sm-6 text-start ">Designation</dt>
