--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -148,11 +148,13 @@
                             <dd class="col-sm-6 text-start"><%= faculty.name %></dd>
                           </div>
                           <% end %>
-<% if faculty.department.unit == 'Administration' %>
+<% @depart = Department.find(faculty.department_id)%>
+<% @unitty = Unit.find(@depart.unit_id) %>
+<% if @unitty == 'Administration' %>
                         <% if faculty.designation.title != nil && faculty.designation.title != '-' && faculty.designation.title != '-NA-' && faculty.department.name != nil %>
                           <div class=row-item>
                             <dt class="col-sm-6 text-start ">Designation</dt>
-                            <dd class="col-sm-6 text-start col2">%= faculty.department.name %> (<%= faculty.designation.title %>) </dd>
+                            <dd class="col-sm-6 text-start col2"><%= faculty.department.name %> (<%= faculty.designation.title %>) </dd>
                           </div>
                         <% end %>
 <% else %>
