--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -148,9 +148,10 @@
                             <dd class="col-sm-6 text-start"><%= faculty.name %></dd>
                           </div>
                           <% end %>
-<% @depart = Department.find(faculty.department_id)%>
-<% @unitty = Unit.find(@depart.unit_id) %>
+<%= @depart = Department.find(faculty.department_id)%>
+<%= @unitty = Unit.find(@depart.unit_id) %>
 <% if @unitty == 'Administration' %>
+<%= @unitty.name %>
                         <% if faculty.designation.title != nil && faculty.designation.title != '-' && faculty.designation.title != '-NA-' && faculty.department.name != nil %>
                           <div class=row-item>
                             <dt class="col-sm-6 text-start ">Designation</dt>
