--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -149,7 +149,7 @@
                           </div>
                           <% end %>
 <% @depart = Department.find(faculty.department_id)%>
-<%= @depart.title %>
+<%= @depart.name %>
 <% @unitty = Unit.find(@depart.unit_id) %>
 <%= @unitty.title %>
 <% if @unitty == 'Administration' %>
