--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -150,7 +150,12 @@
                           <% end %>
 <% @depart = Department.find(faculty.department_id)%>
 <% @unitty = Unit.find(@depart.unit_id) %>
-<% if @unitty.title == 'Administration' %>
+<% if @unitty.title == 'Administration' && (@depart.name == 'Chairperson' || @depart.name == 'Director' || @depart.name == 'Registrar') %>
+                          <div class=row-item>
+                            <dt class="col-sm-6 text-start ">Designation</dt>
+                            <dd class="col-sm-6 text-start col2"><%= faculty.designation.title %></dd>
+                          </div>
+<% elsif @unitty.title == 'Administration' %>
                         <% if faculty.designation.title != nil && faculty.designation.title != '-' && faculty.designation.title != '-NA-' && faculty.department.name != nil %>
                           <div class=row-item>
                             <dt class="col-sm-6 text-start ">Designation</dt>
