--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -392,7 +392,7 @@ font-size: 100px;
 <body>
 
 <table>
-  <h2>Administrators</h2>
+  <h2>Department/Center/Section Administrator</h2>
   <thead>
     <tr>
       <th>Unit</th>
