--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -432,6 +432,15 @@ font-size: 100px;
       
     </tr>
     <tr>
+      
+     
+      <td> Dept. of Civil Engineering</td>
+      <td> </td>
+      <td> </td>
+      
+      
+    </tr>
+    <tr>
      
     
       <td> Dept. of Computer Science and Engineering</td>
@@ -560,6 +569,58 @@ font-size: 100px;
     </tr>
 
     <tr>
+      <tr>
+      
+    
+      <td> Continuing Education  </td>
+      <td>    </td>
+      <td>    </td>
+    
+    </tr>
+      
+      <tr>
+      
+    
+      <td> Centre for Disaster management  </td>
+      <td>    </td>
+      <td>    </td>
+    
+    </tr>
+      
+    
+      <td>   Centre for Sustainable Development</td>
+      <td>    </td>
+      <td>    </td>
+    
+    </tr>
+
+    <tr>
+      
+  
+      <td> Centre for System Design </td>
+      <td></td>
+      <td>    </td>
+      
+    </tr>
+
+    <tr>
+      
+  
+      <td>  Centre of Excellence in Smart Grid </td>
+      <td></td>
+      <td>    </td>
+      
+    </tr>
+
+    <tr>
+      
+      
+      <td>   Industry Institute Partnership</td>
+      <td></td>
+      <td>    </td>
+      
+    </tr>
+
     <tr>
       
  
@@ -655,6 +716,15 @@ font-size: 100px;
 
     <tr>
       
+     
+      <td> Alumni and Corporate Relations</td>
+      <td> </td>
+     
+      
+    </tr>
+
+    <tr>
+      
       
       <td> NCC</td>
       <td> </td>
@@ -669,6 +739,24 @@ font-size: 100px;
       <td>   Dr. Hem Prasad Nath</td>
       <td>  dr.nath@nitk.edu.in</td>
       
+    </tr>
+
+    <tr>
+      
+      
+      <td> Students' Council</td>
+      <td> </td>
+      <td>  </td>
+      
+    </tr>
+
+    <tr>
+      
+    
+      <td>National Service Scheme (NSS) </td>
+      <td> </td>
+      <td>  </td>
+     
     </tr>
 
   </tbody>
